--- a/react-burger-stacker/src/App.css
+++ b/react-burger-stacker/src/App.css
@@ -1,7 +1,24 @@
-div {
-  display: flex;
+* {
+  text-align: center;
 }
 
-.container {
+ul {
+  list-style:none;
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+.panes {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.pane {
+  margin: 1em .5em;
+  padding: 0 2em;
+  width: 45%;
+  border: 2px solid black;
+  border-radius: 10px;
 }
